--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -140,7 +140,7 @@
     </ul>
   </div>
   <div id="mainWin">
-    <pre id="winOutput" aria-live="assertive" aria-relevant="additions" class="outputText"></pre>
+    <pre id="winOutput" role="alert" aria-live="assertive" aria-relevant="additions" class="outputText"></pre>
     <div id="cmdCont">
       <textarea autofocus rows="1" id="cmdInput" aria-live="off" autocapitalize="off"></textarea>
       <div class="chkCmdInputCmdStackCont">
