--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -8,14 +8,14 @@
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css">
-  <link rel="stylesheet" href="css/client.css">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.0.0">
+  <link rel="stylesheet" href="css/client.css?hash=1.0.0">
 
-  <script src="modules/corejs.min.js"></script>
-  <script src="modules/jquery.min.js"></script>
-  <script src="modules/jqwidgets_module.min.js"></script>
-  <script src="modules/codemirror_module.min.js"></script>
-  <script src="modules/tern_module.min.js"></script>
+  <script src="modules/corejs.min.js?hash=1.0.0"></script>
+  <script src="modules/jquery.min.js?hash=1.0.0"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.0.0"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.0.0"></script>
+  <script src="modules/tern_module.min.js?hash=1.0.0"></script>
   
   <script>
 
