--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -8,14 +8,14 @@
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.0.0">
-  <link rel="stylesheet" href="css/client.css?hash=1.0.0">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.0.1">
+  <link rel="stylesheet" href="css/client.css?hash=1.0.1">
 
-  <script src="modules/corejs.min.js?hash=1.0.0"></script>
-  <script src="modules/jquery.min.js?hash=1.0.0"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.0.0"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.0.0"></script>
-  <script src="modules/tern_module.min.js?hash=1.0.0"></script>
+  <script src="modules/corejs.min.js?hash=1.0.1"></script>
+  <script src="modules/jquery.min.js?hash=1.0.1" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.0.1"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.0.1"></script>
+  <script src="modules/tern_module.min.js?hash=1.0.1"></script>
   
   <script>
 
@@ -27,6 +27,15 @@
     $(document).ready(function() {
       Mudslinger.init();
     });
+
+    if (typeof require !== 'undefined') {
+      const {ipcRenderer} = require('electron');
+      console.log("IPC_RENDERER: "+!!ipcRenderer)
+      window.ipcRenderer = ipcRenderer;
+      if (ipcRenderer) ipcRenderer.on('set-text', (event, selector, text) => {
+          $(selector).text(text);
+      });
+    }
   </script>
 </head>
 <body>
