--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -8,14 +8,14 @@
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.0.1">
-  <link rel="stylesheet" href="css/client.css?hash=1.0.1">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.0.2">
+  <link rel="stylesheet" href="css/client.css?hash=1.0.2">
 
-  <script src="modules/corejs.min.js?hash=1.0.1"></script>
-  <script src="modules/jquery.min.js?hash=1.0.1" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.0.1"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.0.1"></script>
-  <script src="modules/tern_module.min.js?hash=1.0.1"></script>
+  <script src="modules/corejs.min.js?hash=1.0.2"></script>
+  <script src="modules/jquery.min.js?hash=1.0.2" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.0.2"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.0.2"></script>
+  <script src="modules/tern_module.min.js?hash=1.0.2"></script>
   
   <script>
 
@@ -42,8 +42,9 @@
 <div id="mudslinger">
   <div id="menuBar">
     <ul>
-      <li id="menuBar-conn-disconn" data-option-name="connect">Connetti
+      <li>Connessione
         <ul>
+          <li id="menuBar-conn-disconn" data-option-name="connect">Connetti</li>
           <li data-option-name="use-profile">Personaggi</li>
         </ul>
       </li>
@@ -161,7 +162,7 @@
           </div>
           <div id="row-input">
             <div id="cmdCont">
-              <textarea autofocus rows="1" id="cmdInput" aria-label="Barra comandi" autocapitalize="off"></textarea>
+              <textarea autofocus rows="1" id="cmdInput" aria-label="Barra comandi" autocomplete="off" autocorrect="off" spellcheck="false" autocapitalize="off" style="-webkit-user-modify: read-write-plaintext-only;"></textarea>
               <div class="chkCmdInputCmdStackCont">
                 <input id="chkCmdTriggers" type="checkbox" checked title="Triggers">
                 <label for="chkCmdTriggers" class="checker checkerTriggers" aria-live="polite" title="Abilita o disabilita Triggers"></label>
