fixes and performance

--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -161,7 +161,9 @@
             </div>
           </div>
           <div id="row-center">
+            <div style="position:absolute;left:0;right:0;top:0;bottom:0;overflow:auto;">
               <pre tabindex="2" id="winOutput" role="alert" aria-label="Testo MUD" aria-live="assertive" aria-relevant="additions text" class="outputText"></pre>
+            </div>
           </div>
           <div id="row-bottom">
             <div id="row-bottom-left">
