--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -8,15 +8,15 @@
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.0.3">
-  <link rel="stylesheet" href="css/client.css?hash=1.0.3">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.0.4">
+  <link rel="stylesheet" href="css/client.css?hash=1.0.4">
   <link rel="manifest" href="ts2client.webmanifest">
 
-  <script src="modules/corejs.min.js?hash=1.0.3"></script>
-  <script src="modules/jquery.min.js?hash=1.0.3" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.0.3"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.0.3"></script>
-  <script src="modules/tern_module.min.js?hash=1.0.3"></script>
+  <script src="modules/corejs.min.js?hash=1.0.4"></script>
+  <script src="modules/jquery.min.js?hash=1.0.4" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.0.4"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.0.4"></script>
+  <script src="modules/tern_module.min.js?hash=1.0.4"></script>
   
   <script>
 
@@ -161,7 +161,9 @@
             </div>
           </div>
           <div id="row-center">
+            <div style="position:absolute;left:0;right:0;top:0;bottom:0;overflow:auto;">
               <pre tabindex="2" id="winOutput" role="alert" aria-label="Testo MUD" aria-live="assertive" aria-relevant="additions text" class="outputText"></pre>
+            </div>
           </div>
           <div id="row-bottom">
             <div id="row-bottom-left">
