--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div id="row-center">
-            <div style="position:absolute;left:0;right:0;top:0;bottom:0;overflow:auto;">
+            <div class="fill-parent">
               <pre tabindex="2" id="winOutput" role="alert" aria-label="Testo MUD" aria-live="assertive" aria-relevant="additions text" class="outputText"></pre>
             </div>
           </div>
