--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -119,13 +119,21 @@
           <li data-option-name="variables">Variabili</li>
           <li data-option-name="classes">Classi</li>
           <li data-option-name="events">Eventi</li>
-          <li data-option-name="script">Script</li>
+          <li type="separator"></li>
+          <li data-option-name="script">Creazione e test di script</li>
+          <li type="separator"></li>
+          <li data-option-name="exportclass">Esporta scripts</li>
+          <li data-option-name="importscript">Importa scripts</li>
           <li type="separator"></li>
           <li data-option-name="update-triggers"><img style='float: left; margin-right: 5px;width:16px;height:16px;' src='images/menu/update.png' />Aggiorna preimpostati</li>
           <li>Avanzate
             <ul>
               <li data-option-name="base_aliases">Alias preimpostati</li>
               <li data-option-name="base_triggers">Triggers preimpostati</li>
+              <li data-option-name="base_events">Eventi preimpostati</li>
+              <li type="separator"></li>
+              <li data-option-name="base_exportclass">Esporta da preimpostati</li>
+              <li data-option-name="base_importscript">Importa in preimpostati</li>
             </ul>
           </li>
         </ul>
