--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -8,15 +8,15 @@
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.2.3">
-  <link rel="stylesheet" href="css/client.css?hash=1.2.3">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.3.2">
+  <link rel="stylesheet" href="css/client.css?hash=1.3.2">
   <link rel="manifest" href="ts2client.webmanifest">
 
-  <script src="modules/corejs.min.js?hash=1.2.3"></script>
-  <script src="modules/jquery.min.js?hash=1.2.3" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.2.3"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.2.3"></script>
-  <script src="modules/tern_module.min.js?hash=1.2.3"></script>
+  <script src="modules/corejs.min.js?hash=1.3.2"></script>
+  <script src="modules/jquery.min.js?hash=1.3.2" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.3.2"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.3.2"></script>
+  <script src="modules/tern_module.min.js?hash=1.3.2"></script>
   
   <script>
 
@@ -119,13 +119,21 @@
           <li data-option-name="variables">Variabili</li>
           <li data-option-name="classes">Classi</li>
           <li data-option-name="events">Eventi</li>
-          <li data-option-name="script">Script</li>
+          <li type="separator"></li>
+          <li data-option-name="script">Creazione e test di script</li>
+          <li type="separator"></li>
+          <li data-option-name="exportclass">Esporta scripts</li>
+          <li data-option-name="importscript">Importa scripts</li>
           <li type="separator"></li>
           <li data-option-name="update-triggers"><img style='float: left; margin-right: 5px;width:16px;height:16px;' src='images/menu/update.png' />Aggiorna preimpostati</li>
           <li>Avanzate
             <ul>
               <li data-option-name="base_aliases">Alias preimpostati</li>
               <li data-option-name="base_triggers">Triggers preimpostati</li>
+              <li data-option-name="base_events">Eventi preimpostati</li>
+              <li type="separator"></li>
+              <li data-option-name="base_exportclass">Esporta da preimpostati</li>
+              <li data-option-name="base_importscript">Importa in preimpostati</li>
             </ul>
           </li>
         </ul>
