--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -8,15 +8,15 @@
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.3.5">
-  <link rel="stylesheet" href="css/client.css?hash=1.3.5">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.3.6">
+  <link rel="stylesheet" href="css/client.css?hash=1.3.6">
   <link rel="manifest" href="ts2client.webmanifest">
 
-  <script src="modules/corejs.min.js?hash=1.3.5"></script>
-  <script src="modules/jquery.min.js?hash=1.3.5" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.3.5"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.3.5"></script>
-  <script src="modules/tern_module.min.js?hash=1.3.5"></script>
+  <script src="modules/corejs.min.js?hash=1.3.6"></script>
+  <script src="modules/jquery.min.js?hash=1.3.6" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.3.6"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.3.6"></script>
+  <script src="modules/tern_module.min.js?hash=1.3.6"></script>
   
   <script>
 
@@ -96,7 +96,8 @@
           <li data-option-name="enable-aliases"><label for="menuBar-chkEnableAlias"><input id="menuBar-chkEnableAlias" type="checkbox" checked>Aliases</label></li>
           <li data-option-name="enable-sounds"><label for="menuBar-chkEnableSound"><input id="menuBar-chkEnableSound" type="checkbox" checked>Suoni</label></li>
           <li type="separator"></li>
-          
+          <li data-option-name="numpadconfig">Tastierino Numerico</li>
+          <li type="separator"></li>
           <li>Avanzate
             <ul>
               <li data-option-name="enable-mxp" title="Il protocollo MXP permette al server di mandare variabili ed altro al client (preferibile abilitato)"><label for="menuBar-chkEnableMxp"><input id="menuBar-chkEnableMxp" type="checkbox" checked>MXP</label></li>
