alcune correzioni e alzo versione

--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="modules/modules.min.css?hash=${hash}">
   <link rel="stylesheet" href="css/client.css?hash=${hash}">
   <link rel="manifest" href="ts2client.webmanifest">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
 
   <script src="modules/corejs.min.js?hash=${hash}"></script>
   <script src="modules/jquery.min.js?hash=${hash}" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
@@ -148,7 +149,7 @@
           </li>
           <li data-option-name="mapper">Mapper</li>
           <li data-option-name="about">Versione</li>
-          <li data-option-name="help"><a href="./help.html" target="_blank">Help</a></li>
+          <li data-option-name="help">Help</li>
         </ul>
       </li>
       <li data-require-api="true" data-option-name="docs"><a href="/docs/" target="_blank">Docs</a></li>
