--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -8,15 +8,16 @@
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.3.6">
-  <link rel="stylesheet" href="css/client.css?hash=1.3.6">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.3.7">
+  <link rel="stylesheet" href="css/client.css?hash=1.3.7">
   <link rel="manifest" href="ts2client.webmanifest">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
 
-  <script src="modules/corejs.min.js?hash=1.3.6"></script>
-  <script src="modules/jquery.min.js?hash=1.3.6" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.3.6"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.3.6"></script>
-  <script src="modules/tern_module.min.js?hash=1.3.6"></script>
+  <script src="modules/corejs.min.js?hash=1.3.7"></script>
+  <script src="modules/jquery.min.js?hash=1.3.7" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.3.7"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.3.7"></script>
+  <script src="modules/tern_module.min.js?hash=1.3.7"></script>
   
   <script>
 
@@ -148,7 +149,7 @@
           </li>
           <li data-option-name="mapper">Mapper</li>
           <li data-option-name="about">Versione</li>
-          <li data-option-name="help"><a href="./help.html" target="_blank">Help</a></li>
+          <li data-option-name="help">Help</li>
         </ul>
       </li>
       <li data-require-api="true" data-option-name="docs"><a href="/docs/" target="_blank">Docs</a></li>
