--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -176,6 +176,18 @@
             <div class="fill-parent">
               <pre tabindex="2" id="winOutput" role="alert" aria-label="Testo MUD" aria-live="assertive" aria-relevant="additions text" class="outputText"></pre>
             </div>
+            <div id="notificationTop">
+              <div id="notificationTopContent">
+              </div>
+            </div>
+            <div id="notificationBottom">
+              <div id="notificationBottomContent">
+              </div>
+            </div>
+            <div id="notification-top">
+            </div>
+            <div id="notification-bottom">  
+            </div>
           </div>
           <div id="row-bottom">
             <div id="row-bottom-left">
