--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Tempora Sanguinis giocata nel browser."/>
-
+  <meta http-equiv="Cache-control" content="no-cache">
+  <meta http-equiv="Expires" content="-1">
+  
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
