--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -4,22 +4,22 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Tempora Sanguinis giocata nel browser."/>
-  <meta http-equiv="Cache-control" content="no-cache">
-  <meta http-equiv="Expires" content="-1">
+  <meta http-equiv="Cache-control" content="no-cache"/>
+  <meta http-equiv="Expires" content="-1"/>
   
   <title>TS Web Client</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.4.1">
-  <link rel="stylesheet" href="css/client.css?hash=1.4.1">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.4.2">
+  <link rel="stylesheet" href="css/client.css?hash=1.4.2">
   <link rel="manifest" href="ts2client.webmanifest">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
 
-  <script src="modules/corejs.min.js?hash=1.4.1"></script>
-  <script src="modules/jquery.min.js?hash=1.4.1" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.4.1"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.4.1"></script>
-  <script src="modules/tern_module.min.js?hash=1.4.1"></script>
+  <script src="modules/corejs.min.js?hash=1.4.2"></script>
+  <script src="modules/jquery.min.js?hash=1.4.2" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.4.2"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.4.2"></script>
+  <script src="modules/tern_module.min.js?hash=1.4.2"></script>
   
   <script>
 
