--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Tempora Sanguinis giocata nel browser."/>
   <meta http-equiv="Cache-control" content="no-cache"/>
   <meta http-equiv="Expires" content="-1"/>
+  <meta http-equiv="Pragma" content="no-cache" />
   
   <title>TS Web Client</title>
 
@@ -29,7 +30,11 @@
     document.write('<meta http-equiv="expires" content="' + dt.toGMTString() + '"/>');
 
     $(document).ready(function() {
-      Mudslinger.init();
+      if (typeof(Mudslinger)!=undefined) {
+        Mudslinger.init();
+      } else {
+        setTimeout(() => window.location.reload(), 3000);
+      }
     });
     console.log(typeof require)
     if (typeof require !== 'undefined') {
