user config for mxp images

--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -109,6 +109,7 @@
           <li>Avanzate
             <ul>
               <li data-option-name="enable-mxp" title="Il protocollo MXP permette al server di mandare variabili ed altro al client (preferibile abilitato)"><label for="menuBar-chkEnableMxp"><input id="menuBar-chkEnableMxp" type="checkbox" checked>MXP</label></li>
+              <li data-option-name="enable-mxp-images" title="Se abilitato il mud mostrera immagini in certe room"><label for="menuBar-chkEnableMxpImages"><input id="menuBar-chkEnableMxpImages" type="checkbox" checked>Immagini MXP</label></li>
               <li data-option-name="log-time"><label><input type="checkbox">Marca tempo nell'output</label></li>
               <li data-option-name="debug-scripts"><label><input type="checkbox">Informazioni scripting (debug)</label></li>
               <li type="separator"></li>
