prompt manda a caporiga anche se ci sono immagini allineate sullo schermo che interferirebbero fix a caching di favicon e una script client ora manda versione al server il proxy legge meglio l'ip della connessione

--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -11,10 +11,10 @@
   
   <title>TS Web Client</title>
 
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png?hash=${hash}">
   <link rel="stylesheet" href="modules/modules.min.css?hash=${hash}">
   <link rel="stylesheet" href="css/client.css?hash=${hash}">
-  <link rel="manifest" href="ts2client.webmanifest">
+  <link rel="manifest" href="ts2client.webmanifest?hash=${hash}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
 
   <script src="modules/corejs.min.js?hash=${hash}"></script>
