--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -11,17 +11,17 @@
   
   <title>TS Web Client</title>
 
-  <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=1.5.1">
-  <link rel="stylesheet" href="css/client.css?hash=1.5.1">
-  <link rel="manifest" href="ts2client.webmanifest">
+  <link rel="icon" type="image/png" href="favicon.png?hash=1.5.2">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=1.5.2">
+  <link rel="stylesheet" href="css/client.css?hash=1.5.2">
+  <link rel="manifest" href="ts2client.webmanifest?hash=1.5.2">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
 
-  <script src="modules/corejs.min.js?hash=1.5.1"></script>
-  <script src="modules/jquery.min.js?hash=1.5.1" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=1.5.1"></script>
-  <script src="modules/codemirror_module.min.js?hash=1.5.1"></script>
-  <script src="modules/tern_module.min.js?hash=1.5.1"></script>
+  <script src="modules/corejs.min.js?hash=1.5.2"></script>
+  <script src="modules/jquery.min.js?hash=1.5.2" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=1.5.2"></script>
+  <script src="modules/codemirror_module.min.js?hash=1.5.2"></script>
+  <script src="modules/tern_module.min.js?hash=1.5.2"></script>
   
   <script>
 
