--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -221,6 +221,7 @@
           <li type="separator"></li>
           <li id="appInstallMenu" data-option-name="installapp">Installa App</li>
           <li data-option-name="help">Aiuto (Help)</li>
+          <li data-option-name="snow">Nevica??</li>
         </ul>
       </li>
       <li data-require-api="true" data-option-name="docs"><a href="/docs/" target="_blank">Docs</a></li>
