--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -77,7 +77,7 @@
     });
   </script>
 </head>
-<body class="light">
+<body class="light" style="position: absolute !important;" spellcheck="false">
 <div id="mudslinger">
   <div id="menuBar">
     <ul>
@@ -136,9 +136,9 @@
               <li data-option-name="scrollbuffer" data-option-value="500">500 linee</li>
               <li data-option-name="scrollbuffer" data-option-value="2500">2500 linee</li>
               <li data-option-name="scrollbuffer" data-option-value="5000">5000 linee</li>
-              <li data-option-name="scrollbuffer" data-option-value="10000">10000 linee</li>
-              <li data-option-name="scrollbuffer" data-option-value="15000">15000 linee</li>
-              <li data-option-name="scrollbuffer" data-option-value="50000" title="Attenzione alle performance!">50000 linee</li>
+              <li data-option-name="scrollbuffer" data-option-value="10000">10000 linee <span style="color:yellow;" title="Sconsigliato per sistemi datati!">⚠</span></li>
+              <li data-option-name="scrollbuffer" data-option-value="15000">15000 linee <span style="color:yellow;" title="Sconsigliato per sistemi datati!">⚠</span></li>
+              <li data-option-name="scrollbuffer" data-option-value="50000">50000 linee <span style="color:red;" title="Can it run Crysis?">⚠</span></li>
               <li type="separator"></li>
               <li data-option-name="animatescroll"><label for="menuBar-chkEnableScroll"><input id="menuBar-chkEnableScroll" type="checkbox" checked>Animato</label></li>
               <li data-option-name="splitScrolling"><label for="menuBar-splitScrolling"><input id="menuBar-splitScrolling" type="checkbox">Diviso con PageUp</label></li>
