logger avvertimenti in impostazioni

--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -180,6 +180,8 @@
               <li data-option-name="log-time"><label><input type="checkbox">Marca tempo</label></li>
               <li data-option-name="debug-scripts"><label><input type="checkbox">Informazioni (debug)</label></li>
               <li type="separator"></li>
+              <li data-option-name="log-alerts">Avvertimenti log</li>
+              <li type="separator"></li>
               <li data-option-name="reset-settings">Ripristina</li>
               <li data-option-name="import-settings">Importa Configurazione</li>
               <li data-option-name="export-settings">Esporta Configurazione</li>
