--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -264,11 +264,14 @@
             </div>
           </div>
           <div id="row-center">
-            <div class="fill-parent scrollBack">
-              <pre tabindex="500" id="scrollBack" role="text" aria-label="Scrollback MUD" aria-live="off" class="outputText"></pre>
-            </div>
             <div class="fill-parent winOutput">
               <pre tabindex="500" id="winOutput" role="alert" aria-label="Testo MUD" aria-live="assertive" aria-relevant="additions text" class="outputText"></pre>
+            </div>
+            <div class="scrollBackContainer">
+              <div class="scrollBack">
+                <pre tabindex="499" id="scrollBack" role="text" aria-label="Scrollback MUD" aria-live="off" class="outputText"></pre>
+              </div>
+              <div class="gutter gutter-vertical" style="height: 3px;"></div>
             </div>
             <div id="notificationTop">
               <div id="notificationTopContent">
