finisco layout editor e alcuni bugfix

--- a/browser/src/html/template_full.html
+++ b/browser/src/html/template_full.html
@@ -249,7 +249,7 @@
     </ul>
   </div>
   <div id="mainWin">
-    <div id="content-wrapper">
+    <div class="content-wrapper">
       <div id="column-left">
         <div id="column-left-top">
         </div>
