--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -16,16 +16,16 @@
 
   <title>TS Client</title>
 
-  <link rel="icon" type="image/png" href="favicon.png?hash=2.0.4beta4">
-  <link rel="stylesheet" href="modules/modules.min.css?hash=2.0.4beta4">
-  <link rel="stylesheet" href="css/client.css?hash=2.0.4beta4">
-  <link rel="manifest" href="ts2client.webmanifest?hash=2.0.4beta4">
+  <link rel="icon" type="image/png" href="favicon.png?hash=2.0.4beta5">
+  <link rel="stylesheet" href="modules/modules.min.css?hash=2.0.4beta5">
+  <link rel="stylesheet" href="css/client.css?hash=2.0.4beta5">
+  <link rel="manifest" href="ts2client.webmanifest?hash=2.0.4beta5">
 
-  <script src="modules/corejs.min.js?hash=2.0.4beta4"></script>
-  <script src="modules/jquery.min.js?hash=2.0.4beta4" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
-  <script src="modules/jqwidgets_module.min.js?hash=2.0.4beta4"></script>
-  <script src="modules/codemirror_module.min.js?hash=2.0.4beta4"></script>
-  <script src="modules/tern_module.min.js?hash=2.0.4beta4"></script>
+  <script src="modules/corejs.min.js?hash=2.0.4beta5"></script>
+  <script src="modules/jquery.min.js?hash=2.0.4beta5" onload="if (typeof module != 'undefined') {window.$ = window.jQuery = module.exports;}"></script>
+  <script src="modules/jqwidgets_module.min.js?hash=2.0.4beta5"></script>
+  <script src="modules/codemirror_module.min.js?hash=2.0.4beta5"></script>
+  <script src="modules/tern_module.min.js?hash=2.0.4beta5"></script>
   
   <script>
     if (window.visualViewport) {
@@ -249,7 +249,7 @@
     </ul>
   </div>
   <div id="mainWin">
-    <div id="content-wrapper">
+    <div class="content-wrapper">
       <div id="column-left">
         <div id="column-left-top">
         </div>
